# arch-store

./: .gitignore  MOCHADS.md  askpass.sh  changes.md  main.py
data/: __init__.py  development_apps.json  featured_apps.json  gaming_apps.json
data/repositories/: __init__.py  alpm_repository.py  appstream_repository.py  aur_repository.py  flatpak_repository.py
domain/: __init__.py  entities.py  repositories.py
domain/usecases/: __init__.py  get_development_packages.py  get_featured_packages.py  get_gaming_packages.py  get_group_packages.py  get_installed_packages.py  get_popular_packages.py  get_updatable_packages.py  install_package.py  launch_package.py  search_packages.py  uninstall_package.py
locale/: en_US.qm  en_US.ts  es_ES.qm  es_ES.ts  zh_CN.qm  zh_CN.ts
packaging/arch/: PKGBUILD  arch-store  (+1 more)
presentation/: backend.py  main.qml  system_icon_provider.py
qml_modules/: MochaDS
src-rust/: .qmlls.ini  Cargo.toml  build.rs
src-rust/src/: config.rs  main.rs
src-rust/src/data/: alpm_repository.rs  appstream_repository.rs  aur_repository.rs  flatpak_repository.rs  mod.rs
src-rust/src/domain/: entities.rs  repositories.rs
src-rust/src/domain/usecases/: get_development_packages.rs  get_featured_packages.rs  get_gaming_packages.rs  get_group_packages.rs  get_installed_packages.rs  get_popular_packages.rs  get_updatable_packages.rs  install_package.rs  launch_package.rs  mod.rs  search_packages.rs  uninstall_package.rs
src-rust/src/presentation/: backend.rs  localization.cpp  localization.h  system_icon_provider.cpp  system_icon_provider.h
(+15 files in other folders)
