[package]
name = "arch-store"
version = "0.1.0"
edition = "2021"
links = "arch-store"

[[bin]]
name = "arch-store"
path = "src/main.rs"

[dependencies]
# Qt bridge
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (para repos async)
tokio = { version = "1", features = ["full"] }

# HTTP client (AUR + Flathub API)
reqwest = { version = "0.12", features = ["json"] }

# ALPM (pacman library) — v5 supports libalpm 16.x
alpm = "5"

# Notificações nativas do sistema (D-Bus)
notify-rust = "4"

# Utils
async-trait = "0.1"
anyhow = "1"
once_cell = "1"
futures-util = "0.3"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
